--- a/Week 4/complaints_app/index.html
+++ b/Week 4/complaints_app/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"></script>
-      <script src="app.js"></script>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dougie the Donut & Pizza Rat-cy</title>
+    <link href="style.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="appw4d3HW.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <h1>Dougie the Donut & Pizza Rat</h1>
+      <form>
+        <input type="number" id="input-box" placeholder="# Of Complains"/>
+      </form>
+
+      <div id="button-div">
+        <button type="button" value="MANHATTAN">Manhattan</button>
+        <button type="button" value="BROOKLYN">Brooklyn</button>
+        <button type="button" value="QUEENS">Queens</button>
+        <button type="button" value="STATEN ISLAND">Staten Island</button>
+        <button type="button" value="BRONX">Bronx</button>
+      </div>
+      
+    </header>
+    <div class="container"></div>
+  </body>
 </html>
