--- a/Week 6/Final_Project_MemMatch/index.html
+++ b/Week 6/Final_Project_MemMatch/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1 class="page-title">Monster-Match</h1>
+<button type="submit" id="pausebtn">Pause Music</button>
   <div class="overlay-text visible">
     Click to Start
   </div>
@@ -23,7 +24,7 @@
   </div>
 
   <div class="game-container">
-    <div class="game-info-container">
+    <div class="game-info-container">   
       <div class="game-info">
         Time <span id="time-remaining">100</span>
       </div>
