--- a/Week 6/Final_Project_MemMatch/index.html
+++ b/Week 6/Final_Project_MemMatch/index.html
@@ -6,9 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <script src="Mem_Match_HWeen.js" async></script>
+  
   <title>Monster-Match</title>
 </head>
-<body>
+<body id="container">
+  <div id="leaves">
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i> 
+  </div>
   <h1 class="page-title">Monster-Match</h1>
 <button type="submit" id="pausebtn">Pause Music</button>
   <div class="overlay-text visible">
@@ -22,8 +40,8 @@
     VICTORY
     <span class="overlay-text-small">Click to Restart</span>
   </div>
-
-  <div class="game-container">
+  
+  <div class="game-container"id="container"> 
     <div class="game-info-container">   
       <div class="game-info">
         Time <span id="time-remaining">100</span>
@@ -287,8 +305,9 @@
         <img class="cob-web cob-web-bottom-right" src="Assets/Images/CobwebGrey.png">
         <img class="card-value" src="Assets/Images/Dracula.png">
       </div>
+
     </div>
   </div>
-
+  
 </body>
 </html>
