--- a/Week 6/Final_Project_MemMatch/index.html
+++ b/Week 6/Final_Project_MemMatch/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="styles.css" rel="stylesheet">
+  <!-- <link href="styles.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="main.css">
   <script src="Mem_Match_HWeen.js" async></script>
-  
   <title>Monster-Match</title>
 </head>
-<body id="container">
+<body>
   <div id="leaves">
     <i></i>
     <i></i>
@@ -25,7 +25,7 @@
     <i></i>
     <i></i>
     <i></i>
-    <i></i> 
+    <i></i>
   </div>
   <h1 class="page-title">Monster-Match</h1>
 <button type="submit" id="pausebtn">Pause Music</button>
@@ -40,9 +40,9 @@
     VICTORY
     <span class="overlay-text-small">Click to Restart</span>
   </div>
-  
-  <div class="game-container"id="container"> 
-    <div class="game-info-container">   
+
+  <div class="game-container">
+    <div class="game-info-container">
       <div class="game-info">
         Time <span id="time-remaining">100</span>
       </div>
@@ -305,9 +305,8 @@
         <img class="cob-web cob-web-bottom-right" src="Assets/Images/CobwebGrey.png">
         <img class="card-value" src="Assets/Images/Dracula.png">
       </div>
-
     </div>
   </div>
-  
+
 </body>
 </html>
